cp: 2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>

PR c++/7015
	* semantic.c (finish_asm_stmt): Fix operand/output_operands
	thinko.
	* typeck.c (c_expand_asm_operands): Protect from error_mark_node.
testsuite
	* g++.dg/ext/asm3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57192 138bc75d-0d04-0410-961f-82ee72b054a4