gcc/cp/semantics.c
@@ -929,7 +929,7 @@ finish_asm_stmt (cv_qualifier, string, output_operands,
 	  tree operand;
 
 	  constraint = TREE_STRING_POINTER (TREE_VALUE (TREE_PURPOSE (t)));
-	  operand = TREE_VALUE (output_operands);
+	  operand = TREE_VALUE (t);
 
 	  if (!parse_output_constraint (&constraint,
 					i, ninputs, noutputs,
